style.css
:root {
  --accent-color: #74c969;
  --blue-accent-color: rgb(62, 154, 177);
  --dark-color: #40024d;
  --light-color: rgb(247, 221, 255);
}

*, *::before, *::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  width: 100%;
  height: 100%;
  background-color: var(--light-color);
  overflow-x: hidden;
  font-family: 'Faustina', serif;
  z-index: -1000000000;
}

h1, h2, h3, h4, h5, h6 {
  font-family:'Londrina Solid', cursive;
  margin: 0;
}

p {
  font-size: 20px;
}

a {
  display: inline-block;
  font-size: 22px;
}

a:link {
  color: var(--dark-color);
}

a:focus, button:focus {
  outline: 4px dashed rgb(14, 3, 119);
  transform: scale(1.1);
  transition: transform 200ms ease-in;
}

a:visited, button:visited {
  color: gray;
}

a:hover, button:hover {
  color: red;
}

a:active, button:active {
  color: blue;
}

h1 {
  font-size: 6rem;
}

h2 {
  font-size: 2.5rem;
}

header {
  position: relative;
  width: 100%;
  height: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#logo-group {
  display: flex;
  align-items: center;
  padding: 10px;
}

#logo {
  padding-right: 10px;
}

#logo a img {
  width: 100px;
  max-width: 100%;
  height: auto;
}

#header-name {
  width: 50px;
  text-align: center;
  color: var(--dark-color);
}

#main-nav {
  position: absolute;
  top: 0;
  right: 0;
  margin: 20px 60px;
  width: 400px;
}

#main-nav ul#main {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
}

#nav-toggle {
  position: absolute;
  top: 1rem;
  right: 1rem;
  cursor: pointer;
  width: 4rem;
  height: 3rem;
  background: transparent;
  border: none;
  padding: 1rem;
  z-index: 10000;
}

#hamburger, #hamburger::before, #hamburger::after {
  position: relative;
  display: block;
  width: 2rem;
  height: 3px;
  background-color: var(--accent-color);
  transition: transform 500ms ease-in;
}

#hamburger::before, #hamburger::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
}

#hamburger::after {
  bottom: 8px;
}

#hamburger::before {
  top: 8px;
}

.nav-open #hamburger::after {
  opacity: 0;
}

.nav-open #hamburger::before {
  transform: rotate(90deg) translateX(-7px);
}

.nav-open #hamburger {
  transform: rotate(.625turn) translateX(5px);
}

.smaller-screen-nav {
  position: fixed;
  top:0;
  bottom:0;
  left:0;
  right:0;
  background-color: var(--light-color);
  transform: translateX(100%);
  transition: transform 500ms ease-in;
  z-index: 9999;
}

.nav-open .smaller-screen-nav {
  transform: translateX(0);
}

.smaller-screen-nav ul, #main-nav ul {
  height: 100%;
  list-style: none;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.smaller-screen-nav ul a {
  text-decoration: none;
  font-size: 5rem;
}

#hero {
  margin: 80px 0;
  display: flex;
  justify-content: center;
  left: 30%;
} 

#hero img {
  width: 300px;
  height: auto;
  max-width: 100%;
  box-shadow: 
    3px 3px 15px var(--dark-color),
    -3px -3px 20px var(--dark-color);
  filter: grayscale(60%);
}

.hero-text {
  margin-left: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 700px;
  height: auto;
}

.hero-text div {
  display:flex;
  height: fit-content;
}

.hero-text span {
  align-self: flex-end;
  font-size: 25px;
}

.hero-text h2 {
  align-self: flex-end;
  margin-top: 80px;
  font-family: Faustina, serif;
  color: white;
}

#backsplash {
  position: absolute;
  right: 0;
  bottom: 415px;
  width: 80%;
  height: 60px;
  background-color: var(--accent-color);
  z-index: -9999;
}

#about-text-container {
  background-color: var(--light-color);
  height: fit-content;
  padding: 50px;
  width: 40%;
  margin: 300px auto;
  box-shadow: 2px 2px 5px black,
  -2px -2px 10px rgb(238, 210, 243);
  border-radius: 1rem;
  z-index: -1000;
}

#about-colorblock {
  position: absolute;
  left:0;
  bottom: -85px;
  width: 80%;
  height: 60px;
  background-color: var(--blue-accent-color);
}

#about h2, #skills h2, #projects h2 {
  z-index: 999;
  color: white;
}

.about-paragraphs {
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 400px;
}

#about div img {
  position: absolute;
  right: 200px;
  top: 1200px;
  width: 400px;
  z-index: -1001;
}

.title-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.title-container a {
  height: min-content;
  color: white;
  z-index: 999;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  border: 0;
  overflow: hidden;
}

#skills, #projects {
  width: 50%;
  box-shadow: 2px 2px 5px black,
  -2px -2px 10px rgb(238, 210, 243);
  margin: 100px auto;
  border-radius: 1rem;
}

.skill-icons {
  display: flex;
  justify-content: space-around;
  text-align: center;
  margin: auto;
  padding: 50px;
}

#skills .title-container {
  padding: 50px;
  justify-content: flex-end;
}

#skills h2 {
  margin-bottom: 0;
}

#skills-colorblock {
  position: absolute;
  right: 0;
  width: 80%;
  height: 60px;
  background-color: var(--blue-accent-color);
}

#java {
  width: 240px;
}

/* PROJECTS */

#projects {
  margin-top: 300px;
  width: 1400px;
  padding: 20px;
  height: auto;
}

h3 {
  font-size: 2rem;
}

#projects .title-container {
  padding-top: 30px;
}

#projects-colorblock {
  position: absolute;
  left: 0;
  width: 80%;
  height: 60px;
  background-color: var(--blue-accent-color);
}

#projects-container {
  display: grid;
  grid-template-rows: repeat(3, 400px);
  grid-template-columns: repeat(auto-fill, 440px);
  height: 600px;
  overflow-y: scroll;
}

.item {
  display: flex;
  flex-direction: column;
  margin: 20px;
}

.project-title {
  align-self: center;
  text-align: center;
  height: 40px;
}

.project-display-container {
  display: flex;
  border-radius: 1rem;
  height: 305px;
}

hr {
  width: 40px;
}

.project-links {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  margin: auto;
  width: 50px;
  height: 300px;
}


.project-image img {
  width: 300px;
  height: 300px;
  box-sizing: border-box;
  border-radius: 10px;
  box-shadow: 2px 2px 5px black;
}

.sort-container {
  margin: 40px auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 500px;
  height: 100px;
  text-align: center;
}

#sort-backsplash {
  position: relative;
  display: block;
  top: 82px;
  left: 435px;
  width: 500px;
  height: 10px;
  border-radius: 1rem;
  background-color: var(--accent-color);
}

.wrapper {
  text-align: center;
  width: 100px;
  margin: auto;
}

label {
  font-size: 20px;
}

input[type='radio'] {
  position: absolute;
  opacity: 0;
}

input[type='radio'] + label {
  position: relative;
  display: block;
  padding: 10px;
  cursor: pointer;
}

input[type='radio'] + label::before {
  content:'';
  position: relative;
  display: block;
  margin: auto;
  width: 20px;
  height: 20px;
  border-radius: 100%;
  background-color: var(--blue-accent-color);
  transition: all .2s ease-in;
}

input[type='radio']:checked + label::before {
  width: 50px;
  height: 50px;
  background-color: var(--accent-color);
}

input[type='radio']:focus + label::before {
  outline: 3px dotted blue;
}

input[type='radio']:hover + label::before {
  background-color:rgb(14, 3, 119);
}

